k8slearn/10.Kubernetes 日志/10.2.搭建 EFK 日志系统/Manifest/kibana/kibanaDashboard-ingress.yaml
# kibanaDashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-dashboard
  namespace: logging
spec:
  ingressClassName: nginx
  rules:
    - host: kibana.qikqiak.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana-kibana
                port:
                  number: 5601
